dropshot/tests/fail/bad_server_channel1a.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
 --> tests/fail/bad_server_channel1a.rs:6:7
  |
6 | trait MyServer {
  |       ^^^^^^^^

error: endpoint `bad_channel` must have at least two arguments: RequestContext and WebsocketConnection
  --> tests/fail/bad_server_channel1a.rs:13:25
   |
13 |     async fn bad_channel() -> dropshot::WebsocketChannelResult {
   |                         ^^
